--- a/scss/modules/_list_&_cards_&_quotes.scss
+++ b/scss/modules/_list_&_cards_&_quotes.scss
@@ -58,13 +58,34 @@
 }
 
 // small card
-.card {
-    width: 215px;
-    padding: 28px 30px;
-    border-radius: 1px;
-    padding-right: 5px!important;
+.card-square {
+    // card name
+    &:nth-child(1) {
+        grid-area: card1;
+    }
+    &:nth-child(2) {
+        grid-area: card2;
+    }
+    &:nth-child(3) {
+        grid-area: card3;
+    }
+    &:nth-child(4) {
+        grid-area: card4;
+    }
+    &:nth-child(5) {
+        grid-area: card5;
+    }
+    &:nth-child(6) {
+        grid-area: card6;
+    }
     @include resp($lg) {
-        justify-self: flex-end;
+        width: 200px;
+        height: 190px;
+        display: grid;
+        align-content: center;
+        padding: 28px 30px;
+        border-radius: 1px;
+        padding-right: 5px !important;
     }
     @include resp($xl) {
         width: 200px;
@@ -107,28 +128,24 @@
     // card color
     &:nth-child(1) {
         background-color: $blue;
-        grid-area: item1;
     }
     &:nth-child(2) {
         background-color: $half-blue;
-        grid-area: item2;
     }
     &:nth-child(3) {
         background-color: $zinzar;
-        grid-area: item4;
         justify-self: flex-end;
     }
     &:nth-child(4) {
         background-color: $green;
-        grid-area: item3;
     }
 }
 
-// horizontal card 
+// horizontal card
 .horizontal-card {
     @extend .sm_root_card;
 }
-// list item 
+// list item
 .horizontal-card-list {
     @extend .cus_card;
 }
