--- a/css/main.css
+++ b/css/main.css
@@ -528,20 +528,23 @@
 }
 @media only screen and (min-width: 1200px) {
   .card-square {
-    width: 200px;
+    width: 210px;
+    height: 200px;
+    padding: 28px 38px;
     padding-top: 30px;
   }
 }
 @media only screen and (min-width: 1400px) {
   .card-square {
-    padding-top: 35px;
-    width: 235px;
+    width: 225px;
+    height: 215px;
   }
 }
 @media only screen and (min-width: 1800px) {
   .card-square {
     width: 260px;
     padding: 50px 25px 40px 42px;
+    height: 240px;
   }
 }
 .card-square .icon_wrap img {
@@ -3709,6 +3712,20 @@ main #mainContainer .card__element:nth-child(4) {
     grid-template-rows: 1fr 1fr;
     grid-template-areas: "card1 card1" "card3 card2";
     grid-gap: 25px;
+    justify-self: flex-end;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  .about-us main .card_wrap {
+    grid-gap: 45px 50px;
+  }
+}
+@media only screen and (min-width: 1400px) {
+  .about-us main .card_wrap {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-areas: ". card1" "card2 ." ". card3";
+    grid-gap: 0;
   }
 }
 .about-us main .card_wrap .card-square:nth-child(1) {
@@ -3741,6 +3758,9 @@ main #mainContainer .card__element:nth-child(4) {
   main .container {
     margin-top: 110px;
   }
+}
+main .container .head_form {
+  padding-top: 45px;
 }
 
 /*# sourceMappingURL=main.css.map */
