--- a/scss/modules/_list_&_cards_&_quotes.scss
+++ b/scss/modules/_list_&_cards_&_quotes.scss
@@ -164,7 +164,7 @@
         padding-right: 55px;
     }
     @include resp ($lg) {
-        width: 310px;
+        width: 100%;
         height: 295px;
         display: flex;
         flex-flow: column wrap;
@@ -174,19 +174,19 @@
         border-radius: 0px;
     }
     @include resp ($xl) {
-        width: 371px;
+        width: 100%;
         height: 355px;
         padding-left: 80px;
         padding-right: 80px;
     }
     @include resp ($xxl) {
-        width: 430px;
+        width: 100%;
         height: 400px;
         padding-left: 90px;
         padding-right: 90px;
     }
     @include resp ($mxl) {
-        width: 540px;
+        width: 100%;
         height: 460px;
         padding-left: 100px;
         padding-right: 100px;
